--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build and Lint
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - "master"
+  pull:
+    types: [opened, reopened, synchronize]
 
 jobs:
   build:
