#5: Support tick tock

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,6 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: daily
+    labels:
+      - "PR: Ignore For Release"
