--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "Homebridge TheNeverStill",
   "name": "homebridge-theneverstill",
-  "version": "0.2.0-beta.4",
+  "version": "0.2.0",
   "description": "Homebridge plugin to add critical functionality to your HomeKit home.",
   "license": "Apache-2.0",
   "repository": {
